upload modal/home fixed/bin fixed + scroll bar (overflow y)

--- a/public/css/new-style.css
+++ b/public/css/new-style.css
@@ -178,7 +178,7 @@ box-shadow: 10px 10px 50px -15px rgba(0,0,0,0.75);
 	text-decoration: underline;
 }
 .file img {
-	width: 9%;
+	width: 15%;
 	float: left;
 }
 .file a{
@@ -186,7 +186,7 @@ box-shadow: 10px 10px 50px -15px rgba(0,0,0,0.75);
 	color: #000;
 }
 .file p{
-	margin:	-6px 0 0px 36px;
+	/*margin:	-6px 0 0px 36px;*/
 }
 .file-action{
 	text-align: center;
@@ -249,4 +249,22 @@ box-shadow: 10px 10px 50px -15px rgba(0,0,0,0.75);
 	width: 50%;
 	margin: 0 auto;
 	margin-top: 14px;
+}
+
+/*home uploads*/
+
+#user-date{
+	    text-align: left;
+    padding: 0 39px;
+    vertical-align: middle;
+}
+#user-date p{
+    margin-top: -5px;
+    font-size: 13px;
+}
+#user-date label{
+	margin: 0px;
+}
+.select, .type{
+	text-align: center;
 }
